# Test_django_App

./: README.md  pyproject.toml  second_test.py  test.py
test_django_app/: asgi.py  settings.py  urls.py  wsgi.py
