[project]
name = "test-django-app"
version = "0.1.0"
description = "First test project with poetry"
authors = [
    {name = "Yulia Vavilova",email = "julia.vavilova89@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.6,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
